--- a/todo
+++ b/todo
@@ -20,12 +20,14 @@ gameplay:
             (0,50,(50 +/-45deg))
         ✔ move invaders towards player @done(19-08-23 00:16)
         ✔ @critical create waves of invaders @done(19-09-02 00:11)
-        ☐ @critical Add 'AI' to invaders so they move from left to right, slowly getting closer.
+        ✔ @critical Add 'AI' to invaders so they move from left to right, slowly getting closer. @done(19-09-02 23:04)
+        ☐ @low Every now and then an invader breaks formation and takes its own path.
         ☐ @critical Create a new wave after every invader is shot
         ☐ @high Have the aliens shoot a missile every now and than.
         ✔ @low invaders in different colors @done(19-09-02 00:12)
         ☐ @low Create animation when invaders appear
-        ☐ @high Every wave the speed increases. Making it impossible to finish the game. 
+        ☐ @high Every wave the speed increases. Making it impossible to finish the game.
+        ☐ @low At a certain interval a spaceship appears and fires missiles
 
     Shooting:
         ☐ @critical keep track of score, how many invaders did you shoot.
@@ -74,6 +76,9 @@ Optimizations:
     ☐ @high use instancing for models
     ☐ @high restructure duplicate code with shaders and materials over components
 
+bugs:
+    ☐ @critical Hide 'gun' on desktop
+
 Could haves / Would likes /:
     ☐ @low add spacial sound and invaders all around
     ☐ @low Easter eggs? by adding certain text url
@@ -84,7 +89,9 @@ Could haves / Would likes /:
 
 # ideas and random stuff
 - there are some WebVR examples of three.js
-
+- Particles : https://github.com/mrdoob/three.js/blob/master/examples/webgl_buffergeometry_custom_attributes_particles.html
+- Music - https://sb.bitsnbites.eu/  (E D B A ? + arps + 8th bass)
+- sfx - https://github.com/mneubrand/jsfxr 
 
 
 
