--- a/todo
+++ b/todo
@@ -71,7 +71,7 @@ design:
         ✔ ground @done(19-09-03 13:16)
         ✔ Sky @done(19-09-03 13:16)
         ☐ mountains
-        ☐ sun
+        ✔ sun @done(19-09-05 23:13)
 
     ✔ Create design for aliens @done(19-09-01 21:07)
     ☐ @high Add more different invaders
@@ -88,6 +88,9 @@ Optimizations:
 bugs:
     ☐ @critical Hide 'gun' on desktop
     ✔ @critical missiles not firing in the right direction on desktop @done(19-09-03 13:17)
+    ☐ Titlescreen has to be a bit smaller for DayDream
+    ☐ Hitbox needs to be a little bit bigger
+    ☐ Sometimes when all invaders are shot we don't get the next wave.
 
 Could haves / Would likes /:
     ☐ @low add spacial sound and invaders all around
