--- a/todo
+++ b/todo
@@ -84,6 +84,7 @@ Optimizations:
     ☐ @low Optimize shaders
     ☐ @high use instancing for models
     ☐ @high restructure duplicate code with shaders and materials over components
+    ☐ @high optimize mountains everywhere there's a lot of 0; don't add face if all 3 verts are at Y:0, than remove unused verts;
 
 bugs:
     ☐ @critical Hide 'gun' on desktop
