--- a/todo
+++ b/todo
@@ -37,7 +37,7 @@ gameplay:
         ☐ @high Create new model
         ☐ @critical Add wireframe shader
     Shooting:
-        ☐ @critical keep track of score, how many invaders did you shoot.
+        ✔ @critical keep track of score, how many invaders did you shoot. @done(19-09-06 21:28)
         ☐ @low show the score on screen
         ☐ @high add a bounding box for the player that could get hit
         ☐ @critical replace placeholder missile
@@ -83,7 +83,8 @@ design:
     ☐ @low animate explosions
     ☐ @low design and animate rockets with fire and smoke
     ✔ @critical Title screen @done(19-09-03 23:32)
-    ☐ @critical Gameover screen
+    ☐ @critical Gameover screen - with last score
+    ☐ Add highest score (local storage) to gameover screen
 
 Optimizations:
     ☐ @low Optimize shaders
@@ -92,13 +93,13 @@ Optimizations:
     ☐ @high optimize mountains everywhere there's a lot of 0; don't add face if all 3 verts are at Y:0, than remove unused verts;
 
 bugs:
-    ☐ @critical Hide 'gun' on desktop
+    ☐ @high Hide 'gun' on desktop
     ✔ @critical missiles not firing in the right direction on desktop @done(19-09-03 13:17)
     ✔ Titlescreen has to be a bit smaller for DayDream @done(19-09-06 01:23)
-    ☐ Titlescreen is cut off on daydream
-    ☐ Hitbox needs to be a little bit bigger
-    ☐ Sometimes when all invaders are shot we don't get the next wave.
-    ☐ Glow on title text is cut off because text starts at Y 0
+    ☐ @critical Titlescreen is cut off on daydream
+    ☐ @high Hitbox needs to be a little bit bigger
+    ☐ @low Sometimes when all invaders are shot we don't get the next wave.(probably due to godmode)
+    ☐ @low Glow on title text is cut off because text starts at Y 0
 
 Could haves / Would likes /:
     ☐ @low add spacial sound and invaders all around
