--- a/todo
+++ b/todo
@@ -29,6 +29,7 @@ gameplay:
         ☐ @low Create animation when invaders appear
         ✔ @critical Every wave the speed increases. Making it impossible to finish the game. @done(19-09-06 22:25)
         ☐ @low At a certain interval a spaceship appears and fires missiles
+            # 
         ☐ @low When a new wave is created, spawn all invaders at random positions in the distance and animate them into formation over a few seconds
         ✔ @low look at 0,0,0 @done(19-09-06 01:23)
         ☐ @low Add more wave formations
@@ -83,7 +84,7 @@ design:
     ☐ @low animate explosions
     ☐ @low design and animate rockets with fire and smoke
     ✔ @critical Title screen @done(19-09-03 23:32)
-    ☐ @today @critical Gameover screen - with last score
+    ✔ @critical Gameover screen - with last score @done(19-09-06 23:28)
     ☐ @low Add highest score (local storage) to gameover screen
 
 Optimizations:
@@ -96,10 +97,11 @@ bugs:
     ☐ @high Hide 'gun' on desktop
     ✔ @critical missiles not firing in the right direction on desktop @done(19-09-03 13:17)
     ✔ Titlescreen has to be a bit smaller for DayDream @done(19-09-06 01:23)
-    ☐ @critical Titlescreen is cut off on daydream
+    ☐ @critical Titlescreen is cut off on daydream (possibly gameover as well)
     ☐ @high Hitbox needs to be a little bit bigger
     ☐ @low Sometimes when all invaders are shot we don't get the next wave.(probably due to godmode)
     ☐ @low Glow on title text is cut off because text starts at Y 0
+    ☐ @high Rapid fire when space is continuesly pressed
 
 Could haves / Would likes /:
     ☐ @low add spacial sound and invaders all around
