--- a/todo
+++ b/todo
@@ -12,7 +12,7 @@
 overall:
     ✔ Setup build pipelines @done(19-08-23 17:20)
     ☐ @critical Music - https://sb.bitsnbites.eu/  
-    ☐ @critical sfx - https://github.com/mneubrand/jsfxr / http://superflashbros.net/as3sfxr/
+    ✔ @critical sfx - https://github.com/mneubrand/jsfxr / http://superflashbros.net/as3sfxr/ @done(19-09-09 22:38)
         ☐ @high Add alarm sound for near collision, when you are about to die
 gameplay:
     ✔ loose the game @done(19-08-26 23:52)
@@ -95,17 +95,17 @@ Optimizations:
     ☐ @low Optimize shaders
     ☐ @high use instancing for models
     ✔ @high restructure duplicate code with shaders and materials over components @done(19-09-06 23:53)
-    ☐ @critical optimize mountains everywhere there's a lot of 0; don't add face if all 3 verts are at Y:0, than remove unused verts;
+    ☐ @today @critical optimize mountains everywhere there's a lot of 0; don't add face if all 3 verts are at Y:0, than remove unused verts;
 
 bugs:
     ☐ @high Hide 'gun' on desktop
     ✔ @critical missiles not firing in the right direction on desktop @done(19-09-03 13:17)
     ✔ Titlescreen has to be a bit smaller for DayDream @done(19-09-06 01:23)
     ☐ @critical Titlescreen is cut off on phone (possibly gameover as well)
-    ☐ @high Hitbox needs to be a little bit bigger
+    ☐ @today @high Hitbox needs to be a little bit bigger
     ☐ @low Sometimes when all invaders are shot we don't get the next wave.(probably due to godmode)
     ☐ @low Glow on title text is cut off because text starts at Y 0
-    ☐ @high Rapid fire when space is continuesly pressed (set boolean on down, remove on up)
+    ✔ @today @high Rapid fire when space is continuesly pressed (set boolean on down, remove on up) @done(19-09-09 22:42)
 
 Could haves / Would likes /:
     ☐ @low add spacial sound and invaders all around
