--- a/todo
+++ b/todo
@@ -102,7 +102,7 @@ bugs:
     ✔ @critical missiles not firing in the right direction on desktop @done(19-09-03 13:17)
     ✔ Titlescreen has to be a bit smaller for DayDream @done(19-09-06 01:23)
     ☐ @critical Titlescreen is cut off on phone (possibly gameover as well)
-    ☐ @today @high Hitbox needs to be a little bit bigger
+    ✔ @today @high Hitbox needs to be a little bit bigger @done(19-09-09 22:44)
     ☐ @low Sometimes when all invaders are shot we don't get the next wave.(probably due to godmode)
     ☐ @low Glow on title text is cut off because text starts at Y 0
     ✔ @today @high Rapid fire when space is continuesly pressed (set boolean on down, remove on up) @done(19-09-09 22:42)
